# highlight-clipper

./: .gitignore  CONTEXT.md  README.md  pyproject.toml
docs/: implementation-status.md  local-runtime.md  milestone-1.md  pipeline-contracts.md  roadmap.md
docs/adr/: 0001-generate-candidates-independently.md  0002-separate-retrieval-from-boundary-selection.md  0003-use-a-bounded-semantic-evaluator.md  0004-use-source-relative-seconds.md  0005-separate-source-from-analysis-media.md  0006-serialize-gpu-models-in-worker-processes.md  0007-preserve-editorial-history-across-reanalysis.md  0008-import-source-recordings-by-copy.md  0009-end-analysis-at-the-queue-snapshot.md
src/highlight_clipper/: __init__.py  artifacts.py  attempts.py  cli.py  composition.py  database.py  domain.py  evaluator_schema.py  model_profiles.py  ports.py  recovery.py  runtime.py  settings.py  setup_assets.py  timebase.py  waveform.py
src/highlight_clipper/adapters/: __init__.py  fake.py  faster_whisper.py  ffmpeg.py  llama_cpp.py  qwen_embedding.py
src/highlight_clipper/analysis/: __init__.py  ranking.py  retrieval.py
src/highlight_clipper/assets/: __init__.py  model-catalog.json
src/highlight_clipper/migrations/: 0001_initial.sql  0002_recovery_and_idempotency.sql  0003_transcript_words.sql  0004_embeddings_and_recovery.sql  0005_reference_language.sql  (+6 more)
tests/: test_database.py  test_evaluation.py  test_fake_workflow.py  test_media_alignment.py  test_model_runtime.py  test_retrieval.py  test_settings.py  test_timebase.py  test_waveform.py  test_web.py  test_workers.py  worker_fixture.py
(+16 files in other folders)
